--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ body{
     padding: .8em .5em;
     text-align: center;
 }
-#main{
-    /* background-color: var(--bg-clr-printview); */
+.main{
     width: 100%;height: 100%;
     display: flex;
     flex-direction: column;
@@ -45,6 +44,7 @@ body{
 }
 #main-s1{
     padding-top: 10px;
+    margin-bottom: 20px;
 }
 #main-s1,
 #main-s1-where,
@@ -99,13 +99,12 @@ body{
         letter-spacing: .5rem;
     }
 }
-#main-s1{
-    margin-bottom: 20px;
-}
+
 /*  */
 #main-s2{
     width: 100%;
     height: 100%;
+    /* margin-bottom: 0px; */
     /* padding: 0 5px; */
 }
 #main-s2-boxing{
@@ -121,4 +120,75 @@ body{
     margin-bottom: 10px;
     font-family: 'Jua';
     font-size: 1.5rem;
+}
+
+/*  */
+
+#main-s3{
+    width: 100%;
+    padding: 3px 0px 30px 0px;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border-top: 4px solid #000;
+    border-radius: 0px;
+    display: none;
+}
+#main-s3-boxing{
+    display: block;
+}
+#main-s3-menus{
+    display: flex;
+}
+#main-s3-x{
+    width: 100%;
+    margin-bottom: 10px;
+}
+.main-s3-menus{
+    margin: 5px;
+    border: 2px dashed #000;
+    border-radius: 18px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* 로그인 */
+#main-login{
+    width: 100%;
+    padding: 3px 0px 30px 0px;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border-top: 4px solid #000;
+    border-radius: 0px;
+    /* display: none; */
+}
+#main-login-boxing{
+    display: block;
+}
+#main-login-menus{
+    display: flex;
+}
+#main-login-x{
+    width: 100%;
+    margin-bottom: 10px;
+}
+#main-login-x p {
+    text-transform: uppercase;
+}
+.main-login-menus{
+    /* margin: 5px; */
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: #000 1px solid;
+    border-left: #000 1px solid;
 }
