--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(/rate.css);
+@import url(/checklist/checklist.css);
 :root{
     --bg-clr-white: #ffffff;
     --bg-clr-main: rgb(255, 255, 255);
