--- a/checklist/checklist.css
+++ b/checklist/checklist.css
@@ -1,25 +1,78 @@
+/* 
+.title"할 일 목록";
 
-#cl-form{
+form#todo-form
+>#todo-input-container
+>input#todo-input(type="text" placeholder="Create a todo list..." required) 
++ button#btn-todo-save"save";
+
+#print-view>.single-todo-container > span +  .delete-btn"Delete"; 
+
+*/
+:root{
+    --bg-clr-white: #ffffff;
+    --bg-clr-main: rgb(255, 255, 255);
+    --bg-clr-form: rgb(137, 160, 139);
+    --bg-clr-title:rgb(105, 185, 112);
+    --bg-clr-printview: rgb(194, 241, 198);
+    --bg-clr-singletodo: rgb(225, 241, 194);
+    --clr: #000;
+    --clr-title: #2382ff;
+    --clr-input-placeholder:#2382ffc4;
+    --boxShadow:5px 5px 10px #e0e0e0,
+                -5px -5px 10px #ffffff;
+    --boxShadow-inset:inset 5px 5px 10px #e0e0e0,
+                    inset -5px -5px 10px #ffffff;
+    --border-radius: 50px;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Gauon Dodum', 'Jua', sans-serif;
+}
+
+html{
+    width: 100vw;height: 100vh;
+}
+body{
+    width: 100%;height: 100%;
+    padding: .8em .5em;
+}
+
+input,
+button{
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+            height: auto; 
+            line-height: normal; 
+            padding: .8em .5em;
+            outline: none;
+            border: none;
+    background-color: #ffffff00;
+}
+
+#todo-form{
     padding: .8em .5em;
     width: 100%;
 }
-#cl-input-container{
+#todo-input-container{
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 5px solid;
+    padding: 0 1.5em;
+    border-bottom: 2px solid #000;
 }
-#cl-input{
+#todo-input{
     width: 100%;
     font-size: 1.2em;
 }
-#cl-input::placeholder{
-    font-size: 1em;
-    font-family: sans-serif;
-    border: ;
+#todo-input::placeholder{
+    font-size: .8em;
 }
-#btn-cl-save,
+#btn-todo-save,
 .delete-btn{
     cursor: pointer;
 }
@@ -29,10 +82,9 @@
     justify-content: center;
     flex-direction: column-reverse;
     width: 100%;
-    background-color: var(--bg-clr-main);
     padding: .8em .5em;
 }
-.single-cl-container{
+.single-todo-container{
     width: 100%;
     margin-bottom: 1em;
     padding: .35em .5em;
@@ -40,8 +92,9 @@
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
+    border-bottom: 1px solid #000;
 }
-.single-cl-container>span{
+.single-todo-container>span{
     margin-left: 1.2em;
     font-size: 1.1em;
 }
