--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
     /* border: var(--border-basic); */
     /* border-radius: var(--border-basic-radius); */
 }
-
+a{
+    text-decoration: none;
+    color: #000;
+}
 html{
     width: 100vw;height: 100vh;
 }
@@ -157,39 +160,5 @@ body{
     background-color: #000;
     color: #ffffff;
     font-weight:normal;
-}
-
-/* 로그인 */
-#main-login{
-    width: 100%;
-    padding: 3px 0px 30px 0px;
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    background-color: white;
-    border-top: 4px solid #000;
-    border-radius: 0px;
-    /* display: none; */
-}
-#main-login-boxing{
-    display: block;
-}
-#main-login-menus{
-    display: flex;
-}
-#main-login-x{
-    width: 100%;
-    margin-bottom: 10px;
-}
-#main-login-x p {
-    text-transform: uppercase;
-}
-.main-login-menus{
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: #000 1px solid;
-    border-left: #000 1px solid;
+    cursor: pointer;
 }
