--- a/dairy/dairy.css
+++ b/dairy/dairy.css
@@ -48,8 +48,11 @@ body{
 .d-header p:nth-child(1){
     font-family: serif;
     font-size: 6.5rem;
-    text-align: left;
     font-weight: bold;
+    /* font-family: 'Forum';
+    font-size: 4rem;
+    font-weight: normal; */
+    text-align: left;
     letter-spacing: 1.2rem;
 }
 
