--- a/checklist2/checklist2.css
+++ b/checklist2/checklist2.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Gauon Dodum', 'Jua', sans-serif;
+    font-family: 'Gauon Dodum', 'Jua','Forum', serif,sans-serif,'Bodoni Moda',
 }
 
 html{
@@ -26,12 +26,13 @@ button{
             border: none;
     background-color: #ffffff00;
 }
-
-#todo-form{
-    padding: .8em .5em;
+.todo{
     width: 100%;
+    height: 100%;
+    padding: .8em .5em;
+    font-family: 'Gauon Dodum', 'Jua';
 }
-#todo-input-container{
+#todo-form{
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -42,6 +43,7 @@ button{
 #todo-input{
     width: 100%;
     font-size: 1.2em;
+    font-family: 'Gauon Dodum', 'Jua';
 }
 #todo-input::placeholder{
     font-size: .8em;
@@ -50,25 +52,21 @@ button{
 .delete-btn{
     cursor: pointer;
 }
-#print-view{
+#todo-list{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    flex-direction: column-reverse;
-    width: 100%;
-    padding: .8em .5em;
+    padding: .8em 0;
 }
-.single-todo-container{
+#todo-list div{
     width: 100%;
     margin-bottom: 1em;
-    padding: .35em .5em;
+    padding: .35em .5em .35em 1.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
     border-bottom: 1px solid #000;
-}
-.single-todo-container>span{
-    margin-left: 1.2em;
-    font-size: 1.1em;
+    font-size: 1.3em;
 }
