--- a/checklist2/checklist2.css
+++ b/checklist2/checklist2.css
@@ -56,6 +56,7 @@ button{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column-reverse;
     justify-content: center;
     padding: .8em 0;
 }
