--- a/checklist/checklist.css
+++ b/checklist/checklist.css
@@ -64,7 +64,7 @@ button{
 #todo-list div{
     width: 100%;
     margin-bottom: 1em;
-    padding: .35em .5em .35em 1.5em;
+    padding: .35em 1.4em .35em 1.8em;
     display: flex;
     justify-content: space-between;
     align-items: center;
