--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     /* border: var(--border-basic); */
     /* border-radius: var(--border-basic-radius); */
 }
+.dp-none{
+    display: none;
+}
+input[type="radio"]{
+    /* display: none; */
+}
 a{
     text-decoration: none;
     color: #000;
@@ -167,4 +173,11 @@ body{
     color: #ffffff;
     font-weight:normal;
     cursor: pointer;
+}
+
+#name{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
