--- a/style.css
+++ b/style.css
@@ -173,12 +173,36 @@ body{
     cursor: pointer;
 }
 
-/* #name{
+#name{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-} */
+    justify-content: center;
+    align-items: centers;
+}
+#name-header{
+    font-family: 'Forum';
+    font-size: 1.3rem;
+    font-weight: bold;
+    height: 70px;
+    
+}
+.name{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    font-family: 'jua';
+    font-size: 1.2rem;
+    border-bottom: 1px solid #000;
+}
+.name:hover{
+    background-color: #000;
+    color: #ffffff;
+    font-weight:normal;
+    cursor: pointer;
+}
 
 /*  */
 .dp-none{
