--- a/style.css
+++ b/style.css
@@ -178,24 +178,31 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: centers;
 }
 #name-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'Forum';
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    height: 70px;
-    
+}
+#names{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
 }
 .name{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 40px;
     font-family: 'jua';
     font-size: 1.2rem;
-    border-bottom: 1px solid #000;
 }
 .name:hover{
     background-color: #000;
@@ -203,7 +210,6 @@ body{
     font-weight:normal;
     cursor: pointer;
 }
-
 /*  */
 .dp-none{
     display: none;
