--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ body{
     align-items: centers;
 }
 #name-header{
+    /* padding:10px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -198,6 +199,7 @@ body{
     gap: 3px;
 }
 .name{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -205,11 +207,20 @@ body{
     font-size: 1.2rem;
 }
 .name:hover{
+    font-family: serif;
+    font-size: 1.8rem;
     background-color: #000;
     color: #ffffff;
     font-weight:normal;
     cursor: pointer;
 }
+
+
+
+
+
+
+
 /*  */
 .dp-none{
     display: none;
