--- a/chat/chat.css
+++ b/chat/chat.css
@@ -35,29 +35,33 @@ button{
     justify-content: space-between;
     padding: .8em .5em;
 } */
-.type{
-    width: 100%;
-    height: 70px;
-    position: fixed;
-    bottom: 0;
-    padding: 0.5em;
-    border-top: 3px solid #000;
-}
-
 .chat{
     width: 100%;
-    height: calc(100% - 70px);
+    height: calc(100% - 90px);
     display: flex;
     align-items: center;
     padding: 1em .5em;
     margin-bottom: .5em;
     border-radius: 50px;
 }
+.type{
+    width: 100%;
+    height: 90px;
+    position: fixed;
+    bottom: 0;
+    padding: 1em;
+    border-top: 3px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 #type-form{
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-bottom: .5em;
     /* border: 1px solid #000;
     border-radius: 50px; */
@@ -72,18 +76,25 @@ button{
 }
 
 .chats{
-    background-color: white;
+    /* background-color: rgb(163, 131, 131); */
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: flex-end;
     flex-direction: column-reverse;
+    align-items: flex-end;
     overflow: scroll;
-    /* border: 1px solid #000;
-    border-radius: 50px; */
+    padding: 1em;
+}
+#chats{
+    /* background-color: yellow; */
+
+    width: 100%;
+    display: block;
+    align-items: flex-end;
+    flex-direction: column;
 }
 #single-chat{
-    background-color:chartreuse ;
+    /* background-color:chartreuse ; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -101,4 +112,9 @@ button{
     font-size: 20px;
     margin: 0 5px 0 0;
     font-family: 'Jua';
+    display: flex;
+    justify-content: space-between;
+}
+.delete-btn{
+    margin: 0 10px;
 }
