--- a/chat/chat.css
+++ b/chat/chat.css
@@ -54,6 +54,7 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: rgba(255, 255, 255, 0.425);
 }
 
 
