--- a/chat/chat.css
+++ b/chat/chat.css
@@ -47,7 +47,7 @@ button{
 .type{
     width: 100%;
     height: 90px;
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     padding: 1em;
     border-top: 3px solid #000;
