--- a/rate/rate.css
+++ b/rate/rate.css
@@ -1,4 +1,5 @@
 *{
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -103,41 +104,73 @@ header{
     font-family: 'Jua';
     font-size: 1.5rem;
 }
+
+/* ++++++++++ */
+.rates{
+    width: 100%;
+    display: block;
+    align-items: flex-end;
+    flex-direction: column;
+}
 .rate-printview{
     width: 100%;
     margin-bottom: 10px;
-    padding: 0.5em;
-    border: 1px solid #000;
+    padding: 1.2em 1.5em 1.2em 2.5em;
+    border: 3px dashed #000;
     border-radius: 50px;
 }
+.single-rate{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.single-rate:nth-last-child(1){
+    margin-bottom: 0;
+}
 
+.rate-text{
+    width: 100%;
+    background: #fff;
+    font-size: 20px;
+    margin: 0 5px 0 0;
+    font-family: 'Jua';
+    display: flex;
+    justify-content: space-between;
+}
+.delete-btn{
+    width: 18%;
+    margin-left: 10px;
+    font-family: 'Jua';
+    font-size: .7em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* ++++++++++++++ */
 .type{
     width: 100%;
     /* padding: 0.5em; */
     border: 1px solid #000;
     border-radius: 50px;
 }
-#type-form{
+.type-form{
+    padding: 0 1.5em;
     width: 100%;
     display: flex;
     align-items: center;
     /* border: 1px solid #000;
     border-radius: 50px; */
 }
-#type-input{
+.type-input{
     width: 100%;
     font-size: 1.2em;
     font-family: 'Gauon Dodum', 'Jua';
 }
-#type-input::placeholder{
+.type-input::placeholder{
     font-size: .8em;
 }
-
-
-
-
-
-
 
 
 /*  */
