--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a{
     color: #000;
 }
 html{
-    width: 100vw;height: 100%;
+    width: 100vw;height: 100vh;
 }
 body{
     width: 100%;height: 100%;
